fix smelter